# hello-aws-xray-sdk

./: Dockerfile  README.md  main.py  pyproject.toml
.github/workflows/: docker-image.yml
