[tool.poetry]
name = "hello-aws-xray-sdk"
version = "0.1.0"
description = ""
authors = ["cm-fujikawa <fujikawa.takuji@classmethod.jp>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
aws-xray-sdk = "^2.14.0"
boto3 = "^1.35.13"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
